src/objects/DMS_Document__c.object
<CustomObject>
    <fields>
        <fullName>CXE_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>DMS_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXE_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>DMS_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXE_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>DMS_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXE_Corporate_Name__c</fullName>
        <label>Corporate Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Document_Category__c</fullName>
        <label>Document Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer - level</fullName>
                </value>
                <value>
                    <fullName>Service - level</fullName>
                </value>
                <value>
                    <fullName>Transaction - level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Document_Number__c</fullName>
        <label>Document Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Document_Type_Abbrev__c</fullName>
        <label>Document Type Abbrev</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CXE_Document_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acknowledgement Receipt for Deposit Credited</fullName>
                </value>
                <value>
                    <fullName>Affidavit of Self-Adjudication (Sole Heir)</fullName>
                </value>
                <value>
                    <fullName>Agreement for Extension of Lines and/or Additional Facilities (CA Agreement)</fullName>
                </value>
                <value>
                    <fullName>Authority to Move-in</fullName>
                </value>
                <value>
                    <fullName>Authorization letter to transact with MERALCO</fullName>
                </value>
                <value>
                    <fullName>Authorized Withholding Agent (AWA) Notice from BIR</fullName>
                </value>
                <value>
                    <fullName>Automatic Payment Arrangement Form (APA)</fullName>
                </value>
                <value>
                    <fullName>BIR Certificate of Registration</fullName>
                </value>
                <value>
                    <fullName>Birth/Death/Marriage Certificates</fullName>
                </value>
                <value>
                    <fullName>Board Resolution</fullName>
                </value>
                <value>
                    <fullName>Certificate of Award/ Notice/ Order issued by National Government Agencies</fullName>
                </value>
                <value>
                    <fullName>Certificate of Compliance</fullName>
                </value>
                <value>
                    <fullName>Certificate of Contestability</fullName>
                </value>
                <value>
                    <fullName>Certificate of Final Electrical Inspection (CFEI)</fullName>
                </value>
                <value>
                    <fullName>Certificate of Sale</fullName>
                </value>
                <value>
                    <fullName>Condominium Certificate of Title</fullName>
                </value>
                <value>
                    <fullName>Connection Agreement</fullName>
                </value>
                <value>
                    <fullName>Contract for Electric Service</fullName>
                </value>
                <value>
                    <fullName>Contract of Lease</fullName>
                </value>
                <value>
                    <fullName>Contract to Sell</fullName>
                </value>
                <value>
                    <fullName>Copy of Official receipts</fullName>
                </value>
                <value>
                    <fullName>Copy of Signed ILP Conforme Letter</fullName>
                </value>
                <value>
                    <fullName>CRB Switch Approval</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Service Application Warranty</fullName>
                </value>
                <value>
                    <fullName>Deed of Conditional Sale</fullName>
                </value>
                <value>
                    <fullName>Deed of Donation</fullName>
                </value>
                <value>
                    <fullName>Deed of Sale</fullName>
                </value>
                <value>
                    <fullName>Distribution Asset Study Fees / Receipts*</fullName>
                </value>
                <value>
                    <fullName>Distribution Impact Study Fee / Receipt</fullName>
                </value>
                <value>
                    <fullName>Distribution Wheeling Service Agreement (DWSA) for Embedded Generators</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Document_Version__c</fullName>
        <label>Document Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Effectivity_Date_of_Document__c</fullName>
        <label>Effectivity Date of Document</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_Expiration_Date_of_Document__c</fullName>
        <label>Expiration Date of Document</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXE_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CXE_File_Name_f__c</fullName>
        <formula>IF(ISBLANK(CXE_Name_Format__c)
 ,CXE_File_Name__c
 ,SUBSTITUTE( 
   CXE_Name_Format__c 
   ,&apos;[SIN]&apos; 
   ,IF(ISBLANK(CXE_Case__r.CaseNumber), CXE_Service__r.SIN__c, CXE_Case__r.CaseNumber)
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_File_URL__c</fullName>
        <label>File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CXE_File_Url_f__c</fullName>
        <description>HYPERLINK(
  $Label.CXE_Heroku_Endpoint 
   + &apos;/bucket/&apos; 
   + CXE_Account__c + &apos;/&apos; 
   + Id
   + &apos;?file=&apos;+ CXE_File_Name__c
   + &apos;&amp;session=&apos; + GETSESSIONID() 
  , CXE_File_Name__c
)</description>
        <formula>HYPERLINK(
&apos;/apex/CXE_HEroku_Redirect?target=dms&amp;aid=&apos;+CXE_Account__c+&apos;&amp;oid=&apos;+Id+&apos;&amp;name=&apos;+ SUBSTITUTE(CXE_File_Name__c, &apos;#&apos;, &apos;-&apos;)
, CXE_File_Name__c
, &apos;_blank&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Name_Format__c</fullName>
        <label>File Name Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Nature_of_Transaction_SA_RF__c</fullName>
        <label>Nature of Transaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>RF</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXE_Responsible_Office__c</fullName>
        <formula>CXE_Case__r.Responsible_Office_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsible Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Service_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Address</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.CXE_Case__c</field>
                <operation>equals</operation>
                <valueField>Address__c.Case__c</valueField>
            </filterItems>
            <filterItems>
                <field>Address__c.Type__c</field>
                <operation>equals</operation>
                <value>Service</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Customer Documents</relationshipLabel>
        <relationshipName>Customer_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXE_Service_Address_t__c</fullName>
        <formula>CXE_Service_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Service_Application_ID__c</fullName>
        <formula>CXE_Service__r.Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Application ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Service_Identification_Number__c</fullName>
        <label>Service Identification Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.CXE_Account__c</field>
                <operation>equals</operation>
                <valueField>Agreement__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Customer Documents</relationshipLabel>
        <relationshipName>Customer_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CXE_Storage_Name__c</fullName>
        <label>Storage Name</label>
        <length>122</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CXE_Trade_or_Brand_Name__c</fullName>
        <formula>CXE_Account__r.Doing_Business_As__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade or Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download__c</fullName>
        <formula>HYPERLINK(
  $Label.CXE_Heroku_Endpoint 
   + &apos;/bucket/&apos; 
   + CXE_Account__c + &apos;/&apos; 
   + Id
   + &apos;?file=&apos;+ CXE_File_Name__c
   + &apos;&amp;session=&apos; + GETSESSIONID() 
  , CXE_File_Name__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIN__c</fullName>
        <formula>CXE_Service__r.SIN__c</formula>
        <label>SIN</label>
        <type>Text</type>
    </fields>
    <label>Customer Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CXE_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DOC-{000000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>